Fixed answer bug and updated mobile and dark mode

--- a/static/css/_flashcard.css
+++ b/static/css/_flashcard.css
@@ -9,6 +9,11 @@
     width: calc(var(--digitWidth) + 10rem);
     font-size: 3rem;
 
+    @media (min-resolution: 150dpi) and (max-width: 450px) {
+        padding: 3rem 3rem 0 3rem;
+        width: calc(var(--digitWidth) + 7rem);
+    }
+
     #equation {
         font-size: 6rem;
         display: flex;
@@ -18,6 +23,10 @@
         border-bottom: 3px solid var(--fontColor);
         letter-spacing: 2px;
         color: var(--fontColor);
+
+        @media (min-resolution: 150dpi) {
+            font-size: 5rem;
+        }
     
         p {
             margin: 0;
@@ -51,10 +60,15 @@
             border-bottom: 1px solid var(--fontColor);
             border-width: 0 0 1px 0;
             outline: 0;
-            font-family: math;
+            font-family: var(--font);
             background-color: var(--bgColor);
             color: var(--fontColor);
             caret-color: var(--fontColor);
+
+            @media (min-resolution: 150dpi) and (max-width: 450px) {
+                font-size: 5rem;
+                width: var(--digitWidth);
+            }
         }
     }
     
