--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,4 +57,8 @@ main {
     display: flex;
     justify-content: center;
     flex-direction: column;
+
+    @media (min-resolution: 150dpi) and (max-width: 450px) {
+        height: 80vh;
+    }
 }
